coreservice/k8s/coreservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coreservice-deployment
  labels:
    app: coreservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coreservice
  template:
    metadata:
      labels:
        app: coreservice
    spec:
      containers:
        - name: coreservice
          image: pimaua/coreservice:bc3028e
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: coreservice
spec:
  selector:
    app: coreservice
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coreservice-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/actions.redirect-to-https: >
      {"Type":"redirect","RedirectConfig":{"Protocol":"HTTPS","Port":"443","StatusCode":"HTTP_301"}}
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
spec:
  ingressClassName: alb
  rules:
    - host: core.pimapi.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redirect-to-https
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coreservice
                port:
                  number: 80
